Update PeliculaControllerTest.java