@@ -4,17 +4,24 @@ import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.hamcrest.Matcher;
+import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.request.MockMultipartHttpServletRequestBuilder;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
+import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
+
 import com.example.demo.model.Pelicula;
-import com.example.demo.service.PeliculaService;
+import com.example.demo.service.PeliculaServiceImpl;
 
 @WebMvcTest(PeliculaController.class)
 public class PeliculaControllerTest {
@@ -23,7 +30,7 @@ public class PeliculaControllerTest {
     private MockMvc mockMvc;
 
     @MockBean
-    private PeliculaService peliculaServiceMock;
+    private PeliculaServiceImpl peliculaServiceMock;
 
     @Test
     public void obtenerTodosTest() throws Exception{
@@ -41,31 +48,25 @@ public class PeliculaControllerTest {
         pelicula2.setGenero("accion");
         pelicula2.setSinopsis("Hola en accion");
         pelicula2.setId(2L);
-        List<Pelicula> peliculas = List.of(pelicula1, pelicula2);
+        List<Pelicula> peliculas = Arrays.asList(pelicula1, pelicula2);
 
-        List<EntityModel<Pelicula>> peliculasResources = peliculas.stream()
-         .map(pelicula -> EntityModel.of(pelicula))
-         .collect(Collectors.toList());
+      
 
         when(peliculaServiceMock.getAllPeliculas()).thenReturn(peliculas);
 
-        mockMvc.perform(get("/peliculas"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$._embedded.peliculas.length()").value(2))
-                .andExpect(jsonPath("$._embedded.peliculas[0].titulo").value("Hola 2"))
-                .andExpect(jsonPath("$._embedded.peliculas[0].año").value(2024))
-                .andExpect(jsonPath("$._embedded.peliculas[0].director").value("Pepito"))
-                .andExpect(jsonPath("$._embedded.peliculas[0].genero").value("accion"))
-                .andExpect(jsonPath("$._embedded.peliculas[0].sinopsis").value("Hola 2 en accion"))
-                .andExpect(jsonPath("$._embedded.peliculas[0].id").value(1))
-                .andExpect(jsonPath("$._embedded.peliculas[0]._links.self.href").value("http://localhost:8080/peliculas/1"))
-                .andExpect(jsonPath("$._embedded.peliculas[1].titulo").value("Hola"))
-                .andExpect(jsonPath("$._embedded.peliculas[1].año").value(2021))
-                .andExpect(jsonPath("$._embedded.peliculas[1].director").value("Pepito"))
-                .andExpect(jsonPath("$._embedded.peliculas[1].genero").value("accion"))
-                .andExpect(jsonPath("$._embedded.peliculas[1].sinopsis").value("Hola en accion"))
-                .andExpect(jsonPath("$._embedded.peliculas[1].id").value(2))
-                .andExpect(jsonPath("$._embedded.peliculas[1]._links.self.href").value("http://localhost:8080/peliculas/2"));
+        mockMvc.perform(MockMvcRequestBuilders.get("/peliculas"))
+                .andExpect(MockMvcResultMatchers.status().isOk())
+                .andExpect(MockMvcResultMatchers.jsonPath("$", Matchers.hasSize(2)))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].titulo", Matchers.is("Hola 2")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].año", Matchers.is(2024)))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].director", Matchers.is("Pepito")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].genero", Matchers.is("accion")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].sinopsis", Matchers.is("Hola 2 en accion")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[1].titulo", Matchers.is("Hola")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[1].año", Matchers.is(2021)))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[1].director", Matchers.is("Pepito")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[1].genero", Matchers.is("accion")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[1].sinopsis", Matchers.is("Hola en accion")));
 
     }
     
